# Tests

./: .gitignore
Raspberry/GPIO/: gpio_controller.py  gpio_monitor.py  test_gpio.py
Raspberry/Relay/: test_relay.py
facepp/: object_detect.py
google-developer-machine-learning/: iris.py  simple-classify.py
py-matplotlib/: coords_demo.py
r-lang/: a.txt  test-stripchart-mul.R  test-stripchart.R  test.R
test-cuda/: vectoradd.py
test-keras/: test1.py
test-opencv/preprocess/: H.xml  resize-images.py  warp-perspective.py
test-opencv/test-describe/: orb.py  sift.py  surf.py
test-opencv/test-match/: match.py
test-opencv/test-match-cpp/: CMakeLists.txt  main.cpp
test-opencv/test-match/sub_modules/: matcher.py  print_log.py  show_stitch.py
test-opencv/test-stitch-cpp/: CMakeLists.txt  main.cpp
test-opencv/test_warpPerspective/: CMakeLists.txt  main.cpp
test-opencv/test_warpPerspective/backup/: CalibrateWarpPerspective.cpp  CalibrateWarpPerspective.h  CoordTrans.cpp  CoordTrans.h  Geometry.cpp  Geometry.h
xili-GIS/: index.html
